--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,30 @@
 h1 {
   color: blueviolet;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
+p {
+  text-align: center;
+}
+img {
+  display: block;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 50%;
+  height: auto;
+  border-radius: 8px;
+}
+.container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.email-link {
+  display: flex;
+  justify-content: center;
 }
