--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,20 @@
+body {
+  background: linear-gradient(to right, rgb(182, 244, 146), rgb(51, 139, 147));
+}
+
 h1 {
-  color: blueviolet;
+  color: #6643b5;
   text-align: center;
 }
 
 h2 {
   text-align: center;
+  color: white;
 }
 
 p {
   text-align: center;
+  color: #6643b5;
 }
 img {
   display: block;
